tests/samples/valid/import_position_and_line.pn
import "line.pn";
import "position.pn";

fn main() -> i32
{
	var from = Position { x: 20, y: 0 };
	var to = Position { x: 0, y: 180 };
	var line = Line { from, to };
	return: line.from.x + line.to.y
}
